--- a/themes/hugo-uno/layouts/post/single.html
+++ b/themes/hugo-uno/layouts/post/single.html
@@ -8,9 +8,9 @@
           <span class="post-date">{{ .Date.Format "Mon, Jan 2, 2006" }}</span>
           {{ .Content }}
         </div>
+        {{ partial "comments.html" . }}
       </div>
     </div>
-
   </body>
-  {{ partial "script.html" .}}
+  {{ partial "script.html" . }}
 </html>
