fixed some anotation of page

--- a/themes/uno/layouts/post/summary.html
+++ b/themes/uno/layouts/post/summary.html
@@ -1,6 +1,6 @@
 <article class="post">
 <header>
-<h2><a href="{{ .Permalink }}">{{ .Title }} {{ if .Draft }}:: DRAFT{{end}}</a> </h2>
+<h2><a href="{{ .Permalink }}" title="阅读全文">{{ .Title }} {{ if .Draft }}:: DRAFT{{end}}</a> </h2>
 <!--<div class="post-meta">{{ .Date.Format "Mon, Jan 2, 2006" }} - Read in {{ .ReadingTime }} Min </div>-->
 </header>
 <div class="summary">
