--- a/themes/uno/layouts/_default/list.html
+++ b/themes/uno/layouts/_default/list.html
@@ -3,13 +3,15 @@
         {{ partial "sidebar.html" . }}
         <div class="content-wrapper">
             <div class="content-wrapper__inner">
-                {{ range .Data.Pages.GroupByDate "2006" }}
-                <h2>{{ .Key }}</h2>
+        <h2>文章列表</h2>
+        <hr style="display:block;width:149px;margin-right:0px;margin-left:0px;border-top-width:1px;border-top-style:solid;border-top-color:rgb(221,221,221);">
+                {{ range .Data.Pages.GroupByDate "2006年 01月" }}
+                <h3>{{ .Key }}</h3>
                 <ul id="list">
                     {{range .Pages }}
                     <li>
-                        <a href="{{ .Permalink }}">{{ .Title }} {{ if .GetParam "draft"}}DRAFT{{end}}</a>
-                        <div class="meta">{{ .Date.Format "Mon, Jan 2, 2006" }}</div>
+                        <a href="{{ .Permalink }}">{{ .Title }} {{ if .GetParam "draft"}}DRAFT{{end}}</a>&nbsp;
+                        <span style="color:#999;font-size:14px;font-style:italic;">({{ .Date.Format "Mon, Jan 02, 2006" }})</span>
                     </li>
                     {{ end }}
                 </ul>
