--- a/themes/uno/layouts/_default/list.html
+++ b/themes/uno/layouts/_default/list.html
@@ -16,6 +16,7 @@
                     {{ end }}
                 </ul>
                 {{ end }}
+                {{ partial "footer.html" . }}
             </div>
         </div>
     </body>
