--- a/themes/uno/layouts/partials/footer.html
+++ b/themes/uno/layouts/partials/footer.html
@@ -1,1 +1,1 @@
-<footer class="footer"> <p>{{ with .Site.Params.copyright }}{{.}}{{ else }}&copy; {{.Now.Format "2006"}}. All rights reserved. {{end}}</p></footer>
+<footer class="footer"> <p style="width:100%;text-align:center">&copy;{{ .Now.Format "2006"}} {{ .Site.Title }} All rights reserved. </p></footer>
