--- a/themes/uno/layouts/partials/footer.html
+++ b/themes/uno/layouts/partials/footer.html
@@ -1,1 +1,1 @@
-<footer class="footer"> <p style="width:100%;text-align:center">&copy;{{ .Now.Format "2006"}} {{ .Site.Title }} All rights reserved. </p></footer>
+<footer class="footer"> <p style="width:100%;text-align:center">&copy;{{ .Now.Format "2006"}} Alimy All rights reserved. </p></footer>
