--- a/themes/uno/layouts/post/summary.html
+++ b/themes/uno/layouts/post/summary.html
@@ -1,3 +1,4 @@
+<div style="box-shadow:0px 0px 8px rgba(68,68,68,.6);-moz-box-shadow:0px 0px 8px rgba(68,68,68,.6);border-radius:4px;-moz-border-radius:4px;padding:16px;margin-top:32px;" >
 <article class="post">
 <header>
 <h2><a href="{{ .Permalink }}" title="阅读全文">{{ .Title }} {{ if .Draft }}:: DRAFT{{end}}</a> </h2>
@@ -7,6 +8,7 @@
     {{ .Summary }}
 </div>
 <footer>
-<a href='{{ .Permalink }}' title="继续阅读"><nobr>Read more →</nobr></a>
+<a href='{{ .Permalink }}' title="继续阅读"><nobr>Read More →</nobr></a>
 </footer>
 </article>
+</div>
