--- a/themes/uno/layouts/_default/list.html
+++ b/themes/uno/layouts/_default/list.html
@@ -4,9 +4,16 @@
         <div class="content-wrapper">
             <div class="content-wrapper__inner">
         <h2>文章列表</h2>
-        <hr style="display:block;width:149px;margin-right:0px;margin-left:0px;border-top-width:1px;border-top-style:solid;border-top-color:rgb(221,221,221);">
+
                 {{ range .Data.Pages.GroupByDate "2006年 01月" }}
-                <h3>{{ .Key }}</h3>
+                <div style="box-shadow:0px 0px 8px rgba(68,68,68,.6);-moz-box-shadow:0px 0px 8px rgba(68,68,68,.6);border-radius:4px;-moz-border-radius:4px;padding:16px;margin-top:32px;">
+                <div id="caption">
+                <h3>
+                  {{ .Key }}
+                  {{ $pages := len .Pages }}
+                  <span style="min-width:48px;text-align:center;float:right;margin-right:64px;background:rgba(68,68,68,.2);border-radius:4px;-moz-border-radius:4px;padding:8px;" title="共{{ $pages }}篇文章">{{ len .Pages }} </span>
+                </h3>
+                </div>
                 <ul id="list">
                     {{range .Pages }}
                     <li>
@@ -15,6 +22,7 @@
                     </li>
                     {{ end }}
                 </ul>
+                </div>
                 {{ end }}
                 {{ partial "footer.html" . }}
             </div>
