--- a/themes/uno/layouts/partials/footer.html
+++ b/themes/uno/layouts/partials/footer.html
@@ -1,1 +1,1 @@
-<footer class="footer"> <p style="width:100%;text-align:center">&copy;{{ .Now.Format "2006"}} Alimy All rights reserved. </p></footer>
+<footer style="padding-top:32px;"> <p style="width:100%;text-align:center">&copy;{{ .Now.Format "2006"}} <a href="mailto:alimy@gility.net" title="Email:alimy@gility.net">Alimy</a> All rights reserved. </p></footer>
