--- a/themes/uno/layouts/partials/footer.html
+++ b/themes/uno/layouts/partials/footer.html
@@ -1,1 +1,1 @@
-<footer style="padding:2em 0 0;display:block;font-size:.8em;color:#b3b3b3;"> <p style="width:100%;text-align:center">&copy;{{ .Now.Format "2006"}} <a href="mailto:alimy@gility.net" title="Email:alimy@gility.net">Alimy</a> All rights reserved. </p></footer>
+<footer id="copyright"> <p>&copy;{{ .Now.Format "2006"}} <a href="mailto:alimy@gility.net" title="Email:alimy@gility.net">Alimy</a> All rights reserved. </p></footer>
