--- a/themes/uno/layouts/post/summary.html
+++ b/themes/uno/layouts/post/summary.html
@@ -1,5 +1,4 @@
-<div style="box-shadow:0px 0px 8px rgba(68,68,68,.6);-moz-box-shadow:0px 0px 8px rgba(68,68,68,.6);border-radius:4px;-moz-border-radius:4px;padding:16px;margin-top:32px;" >
-<article class="post">
+<article class="post panel">
 <header>
 <h2 ><a href="{{ .Permalink }}" title="阅读全文">{{ .Title }} {{ if .Draft }}:: DRAFT{{end}}</a> </h2>
 <!--<div class="post-meta">{{ .Date.Format "Mon, Jan 2, 2006" }} - Read in {{ .ReadingTime }} Min </div>-->
@@ -7,8 +6,7 @@
 <div class="summary">
     {{ .Summary }}
 </div>
-<footer>
+<footer id="more">
 <a href='{{ .Permalink }}' title="继续阅读"><nobr>Read More →</nobr></a>
 </footer>
 </article>
-</div>
