--- a/themes/uno/layouts/partials/head.html
+++ b/themes/uno/layouts/partials/head.html
@@ -17,15 +17,19 @@
     <script src="{{ .Site.BaseURL }}/js/jquery.min.js"></script>
     <script src="{{ .Site.BaseURL }}/js/main.min.js"></script>
     <style type="text/css">
-        .panel {
+        body {
+          background-color:#f9f9f9;
+        }
+        .panel-wrapper {
           box-shadow:0px 0px 8px rgba(68,68,68,.6);
           -moz-box-shadow:0px 0px 8px rgba(68,68,68,.6);
           border-radius:4px;
           -moz-border-radius:4px;
-          padding:16px;
+          padding:16px 24px;
           margin-top:32px;
+          background-color:#fff
         }
-        .panel:hover {
+        .panel-wrapper:hover {
           box-shadow:0px 0px 12px rgba(68,68,68,.6);
           -moz-box-shadow:0px 0px 12px rgba(68,68,68,.6);
         }
@@ -56,9 +60,11 @@
           font-style:italic;
         }
         #post-navigator {
-          padding:16px 0px;
+          padding:24px 0px 16px 0px;
+          vertical-align: middle;
         }
         #post-navigator>a {
+          display: block;
           color:#2479cc;
           text-decoration:none;
         }
@@ -67,7 +73,6 @@
         }
         #post-navigator-next {
           float:right;
-          clear:both;
         }
     </style>
 </head>
