--- a/themes/uno/layouts/post/summary.html
+++ b/themes/uno/layouts/post/summary.html
@@ -1,4 +1,4 @@
-<article class="post panel">
+<article class="post panel-wrapper">
 <header>
 <h2 ><a href="{{ .Permalink }}" title="阅读全文">{{ .Title }} {{ if .Draft }}:: DRAFT{{end}}</a> </h2>
 <!--<div class="post-meta">{{ .Date.Format "Mon, Jan 2, 2006" }} - Read in {{ .ReadingTime }} Min </div>-->
