--- a/themes/uno/layouts/post/single.html
+++ b/themes/uno/layouts/post/single.html
@@ -3,12 +3,12 @@
     {{ partial "sidebar.html" . }}
     <div class="content-wrapper">
       <div class="content-wrapper__inner">
-        <div class="post">
+        <div class="post panel-wrapper">
             <h2>{{ .Title }}</h2>
           <!--<span class="post-date">{{ .Date.Format "Mon, Jan 2, 2006" }}</span>-->
           {{ .Content }}
         </div>
-        <div id="post-navigator" style="">
+        <div id="post-navigator">
           {{with .Next }}<a id="post-navigator-prev" href="{{ .Permalink }}" title="上一篇"><< {{ .Title }}</a>{{ end }}
           {{with .Prev }}<a id="post-navigator-next" href="{{ .Permalink }}" title="下一篇">{{ .Title }} >></a>{{ end }}
         </div>
