--- a/themes/uno/layouts/index.html
+++ b/themes/uno/layouts/index.html
@@ -15,6 +15,7 @@
                         <a href="{{ .Site.BaseURL }}/post/" title="文章列表">Archive</a>
                     </h4>
                 </section>
+                {{ partial "pagination.html" . }}
             {{ partial "footer.html" . }}
             </div>
         </div>
