--- a/themes/uno/layouts/partials/sidebar.html
+++ b/themes/uno/layouts/partials/sidebar.html
@@ -8,7 +8,7 @@
         {{ if or (eq .URL "/post/") (in .URL "/tags/") (in .URL "/categories/") }}
             panel-cover panel-cover--collapsed
         {{ else }}
-                panel-cover
+                panel-cover panel-cover--collapsed
         {{ end }}
         {{ else }}
             panel-cover panel-cover--collapsed
@@ -26,7 +26,7 @@
                 <div class="navigation-wrapper">
                     <nav class="cover-navigation cover-navigation--primary">
                         <ul class="navigation">
-                            <li class="navigation__item"><a href="{{ .Site.BaseURL }}#blog" title="博客首页" class="blog-button">Blog</a> </li>
+                            <li class="navigation__item"><a href="{{ .Site.BaseURL }}" title="博客首页" class="blog-button">Blog</a> </li>
                             </br> {{ if .Site.Params.cv }}
                             <li class="navigation__item"><a href="{{ .Site.Params.cv  }}" title="link to my CV " class="blog-button">CV</a> </li>
                             </br> {{ end }} </ul>
@@ -60,7 +60,7 @@
                     <div class="navigation-wrapper">
                         <nav class="cover-navigation cover-navigation--primary">
                             <ul class="navigation">
-                                <li class="navigation__item"><a href="{{ .Site.BaseURL }}/#blog" title="博客首页" class="blog-button">Blog</a> </li>
+                                <li class="navigation__item"><a href="{{ .Site.BaseURL }}/" title="博客首页" class="blog-button">Blog</a> </li>
                                 </br> {{ if .Site.Params.cv }}
                                 <li class="navigation__item"><a href="{{ .Site.Params.cv  }}" title="link to my CV " class="blog-button">CV</a> </li>
                                 </br> {{ end }} </ul>
