--- a/themes/uno/layouts/post/single.html
+++ b/themes/uno/layouts/post/single.html
@@ -16,7 +16,8 @@
           <h3>Comments</h3>
           {{ partial "comments.html" . }}
         </div>
+        {{ partial "footer.html" .}}
     </div>
+    {{ partial "script.html" . }}
   </body>
-  {{ partial "script.html" . }}
 </html>
