--- a/themes/uno/layouts/partials/sidebar.html
+++ b/themes/uno/layouts/partials/sidebar.html
@@ -26,11 +26,13 @@
                 <div class="navigation-wrapper">
                     <nav class="cover-navigation cover-navigation--primary">
                         <ul class="navigation">
-                            <li class="navigation__item"><a href="{{ .Site.BaseURL }}" title="博客首页" class="blog-button">Blog</a> </li>
+                            <li class="navigation__item"><a href="{{ .Site.BaseURL }}" title="博客首页" class="blog-button">Blog</a> </li> </br></br>
+                            <li class="navigation__item"><a href="{{ .Site.BaseURL }}/post/" title="文章列表" class="blog-button">Archive</a> </li>
                             </br> {{ if .Site.Params.cv }}
                             <li class="navigation__item"><a href="{{ .Site.Params.cv  }}" title="link to my CV " class="blog-button">CV</a> </li>
                             </br> {{ end }} </ul>
-                    </nav> {{ partial "social.html" . }} </div>
+                            {{ partial "social.html" . }}
+                    </nav>  </div>
             </div>
         </div>
         <div class="panel-cover--overlay"></div>
