--- a/themes/uno/layouts/partials/sidebar.html
+++ b/themes/uno/layouts/partials/sidebar.html
@@ -16,7 +16,7 @@
     <div class="panel-main">
         <div class="panel-main__inner panel-inverted">
             <div class="panel-main__content"> {{ if .Site.Params.logo }}
-                <a href="{{ .Site.BaseURL }}/"> <img src="{{ .Site.Params.logo }}" width="80" alt="{{ .Site.Title }} logo" class="panel-cover__logo logo" /> </a> {{ end }}
+                <a href="{{ .Site.BaseURL }}/"> <img src="{{ .Site.Params.logo }}" width="142" height="142" alt="{{ .Site.Title }} logo" class="panel-cover__logo logo" /> </a> {{ end }}
                 <h1 class="panel-cover__title panel-title">
                     <a href="{{ .Site.BaseURL }}/">{{ .Site.Title }}</a>
                 </h1>
