--- a/themes/uno/layouts/partials/head.html
+++ b/themes/uno/layouts/partials/head.html
@@ -23,6 +23,21 @@
   ga('create', 'UA-75081327-1', 'auto');
   ga('send', 'pageview');
 
+  <!-- Fathom - simple website analytics - https://github.com/usefathom/fathom -->
+<script>
+(function(f, a, t, h, o, m){
+	a[h]=a[h]||function(){
+		(a[h].q=a[h].q||[]).push(arguments)
+	};
+	o=f.createElement('script'),
+	m=f.getElementsByTagName('script')[0];
+	o.async=1; o.src=t; o.id='fathom-script';
+	m.parentNode.insertBefore(o,m)
+})(document, window, '//fathom.traefic.com/tracker.js', 'fathom');
+fathom('trackPageview');
+</script>
+<!-- / Fathom -->
+
 </script>
     <style type="text/css">
         body {
@@ -99,7 +114,7 @@
         .pages .pagination>li {
             display:inline;
         }
-       
+
 .pagination>.active>a, .pagination>.active>span, .pagination>.active>a:hover, .pagination>.active>span:hover, .pagination>.active>a:focus, .pagination>.active>span:focus {
     z-index: 2;
     color: #fff;
