--- a/themes/uno/layouts/post/single.html
+++ b/themes/uno/layouts/post/single.html
@@ -9,8 +9,8 @@
           {{ .Content }}
         </div>
         <div id="post-navigator">
-          {{with .Next }}<a id="post-navigator-prev" href="{{ .Permalink }}" title="上一篇"><< {{ .Title }}</a>{{ end }}
-          {{with .Prev }}<a id="post-navigator-next" href="{{ .Permalink }}" title="下一篇">{{ .Title }} >></a>{{ end }}
+          {{with .PrevPage }}<a id="post-navigator-prev" href="{{ .Permalink }}" title="上一篇"><< {{ .Title }}</a>{{ end }}
+          {{with .NextPage }}<a id="post-navigator-next" href="{{ .Permalink }}" title="下一篇">{{ .Title }} >></a>{{ end }}
         </div>
         <div id="post-comments">
           <h3>Comments</h3>
